container spacing fixes

--- a/ui.frontend/src/main/webpack/core-components/container/scss/styles/_container-centered.scss
+++ b/ui.frontend/src/main/webpack/core-components/container/scss/styles/_container-centered.scss
@@ -1,8 +1,10 @@
 .container {
     .cmp-container--center {
-        display: flex !important;
-        flex-direction: column !important;
-        align-items: center !important;
-        justify-content: center !important;
+        @include media (">=tablet-lg") {
+            display: flex !important;
+            flex-direction: column !important;
+            align-items: center !important;
+            justify-content: center !important;
+        }
     }
 }
